# Beats-and-pieces

./: .gitignore  README.md
BigBeats/15-puzzle/: tui.cpp
BigBeats/game-of-life/src/: game_of_life.hpp
Exercism/cpp/anagram/: anagram.h
Exercism/cpp/bob/: bob.h  bob_test.cpp
Exercism/cpp/difference-of-squares/: difference_of_squares.h
Exercism/cpp/etl/: etl.h  etl_test.cpp
Exercism/cpp/food-chain/: food_chain.h  food_chain_test.cpp
Exercism/cpp/gigasecond/: gigasecond.h
Exercism/cpp/grade-school/: grade_school.h  grade_school_test.cpp
Exercism/cpp/grains/: grains.h
Exercism/cpp/hamming/: hamming.h
Exercism/cpp/hello-world/: CMakeLists.txt  hello_world.cpp
ProjectEuler/even-fibonacci-numbers/: even_fibonacci_numbers_test.cpp
ProjectEuler/largest-palidrome-product/: README.md  largest_palidrome_product_test.cpp
Random/15-puzzle/: CMakeLists.txt  README.MD
Random/conquer/: CMakeLists.txt  citizen.cpp  citizen.hpp  tui.cpp
Random/game-of-life/: CMakeLists.txt  README.MD  tui.cpp
Tutorials/angular-tour-of-heroes/: .gitignore
Tutorials/asp-net-core-todo/: AspNetCoreTodo.csproj  README.md  Startup.cs  app.db
Tutorials/cpp-primer-plus/: README.md
Tutorials/haskell-learn-you/: README.md
Tutorials/haskell-real-world/: README.md
Tutorials/rust-programming-language/: README.md
Tutorials/sdl-beginning-game-programming/: README.md
Tutorials/sdl-beginning-game-programming/04-key-presses/: 04_key_presses.cpp  CMakeLists.txt
Tutorials/sdl-beginning-game-programming/06-extension-libraries/: 06_extension_libraries.cpp  CMakeLists.txt
(+248 files in other folders)
